# kube-llm-inference-platform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
gateway/app/: backend_registry.py  main.py  models.py  proxy.py
gateway/tests/: test_backend_registry.py  test_main.py
mock_backend/: main.py
