[project]
name = "kube-llm-inference-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.16",
]
